--- a/front/src/app/Views/dashboard/dashboard.component.html
+++ b/front/src/app/Views/dashboard/dashboard.component.html
@@ -1,28 +1,34 @@
 <app-header></app-header>
-<table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Plate</th>
-      <th scope="col">Entry Time</th>
-      <th scope="col">Departure Time</th>
-      <th scope="col">Price</th>
-      <th scope="col">Created At</th>
-      <th scope="col">Updated At</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let bill of bills">
-      <th scope="row">{{ bill.id }}</th>
-      <td>{{ bill.plate }}</td>
-      <td>{{ bill.entryTime}}</td>
-      <td>{{ bill.departureTime}}</td>
-      <td>{{ bill.price}}</td>
-      <td>{{ bill.createdAt}}</td>
-      <td>{{ bill.updatedAt }}</td>
-    </tr>
-  </tbody>
-</table>
 
+<div class= "container">
+  <h3>Vehicle List</h3><br>
+
+  <button type="button" class="btn btn-primary"(click)="newVehicle()">New Vehicle</button>
+
+  <table class="table">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Plate</th>
+        <th scope="col">Entry Time</th>
+        <th scope="col">Departure Time</th>
+        <th scope="col">Price</th>
+        <th scope="col">Created At</th>
+        <th scope="col">Updated At</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let bill of bills" (click)="editBill(bill.plate)">
+        <th scope="row">{{ bill.plate }}</th>
+        <td>{{ bill.plate }}</td>
+        <td>{{ bill.entryTime}}</td>
+        <td>{{ bill.departureTime}}</td>
+        <td>{{ bill.price}}</td>
+        <td>{{ bill.createdAt}}</td>
+        <td>{{ bill.updatedAt }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <app-footer></app-footer>
